--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    background-image:url('house.jpeg');
+    background-image:url('/house.jpeg');
     background-attachment:fixed;
     background-repeat: no-repeat;
     background-size: cover;
@@ -155,9 +155,10 @@ form .buttons button , .backBtn{
     margin-right: 14px;
 }
 
-@media (max-width: 750px) {
+@media (max-width: 1500px) {
     .container form{
         overflow-y: scroll;
+
     }
     .container form::-webkit-scrollbar{
        display: none;
@@ -234,4 +235,8 @@ outline: none;
 
 input[type=range]:focus::-webkit-slider-runnable-track {
 background: #ccc;
+}
+
+.confirmation {
+    visibility: hidden;
 }
